DO NOT COMMIT TO MAIN updated coupon implimentation
some more work